09.07.2023 improve README file